Fixed unwanted horizontal scroll on home page (#1066)
* updating main origin

rebasing upstream

* Revert "updating main origin"

This reverts commit a996038bb7fbe8a58168d281d480a21c9db78e9b.

Linter updated all py files inadvertently

* quick fixed breakpoint issues in index

* syncing to upstream

* syncing to upstream

--- a/website/static/css/main.css
+++ b/website/static/css/main.css
@@ -8,6 +8,19 @@
     }
 }
 
+@media (min-width:922px) {
+    #base-container {
+        max-width:970px;
+        /* width:970px !important; */
+    }
+}
+@media (min-width:1200px) {
+    #base-container {
+        max-width:1170px;
+        /* width:970px !important; */
+    }
+}
+
 .round-icon {
     margin: 0 auto;
     height: 50px;
